feat: Сверстать шапку страницы

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body class="container">
   <div class="page">
-    <header class="header"></header>
+    <header class="header">
+      <img src="./images/logo.svg" alt="Логотип Место" class="header__logo">
+    </header>
 
     <main class="content">
 
