--- a/index.html
+++ b/index.html
@@ -8,13 +8,33 @@
 </head>
 <body class="container">
   <div class="page">
+
+<!-- Header -->
+
     <header class="header">
       <img src="./images/logo.svg" alt="Логотип Место" class="header__logo">
     </header>
 
+<!-- Main -->
+
     <main class="content">
+      <section class="profile">
+          <div class="profile__container">
+            <img src="./images/avatar.jpg" alt="Аватар профиля" class="profile__avatar">
+            <div class="profile__info">
+              <div class="profile__wrap">
+                <h1 class="profile__name">Жак-Ив Кусто</h1>
+                <button class="profile__edit-button"></button>
+              </div>
+              <h2 class="profile__profession">Исследователь океана</h2>
+            </div>
+          </div>
+          <button class="profile__add-button"></button>
+      </section>
 
     </main>
+
+<!-- Footer -->
 
     <footer class="footer"></footer>
   </div>
