feat: добавит адаптивность блоку profile

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <img src="./images/avatar.jpg" alt="Аватар профиля" class="profile__avatar">
             <div class="profile__info">
               <div class="profile__wrap">
-                <h1 class="profile__name">Жак-Ив Кусто</h1>
+                <h1 class="profile__name">Евгений Адольф</h1>
                 <button class="profile__edit-button"></button>
               </div>
-              <h2 class="profile__profession">Исследователь океана</h2>
+              <h2 class="profile__profession">Конный спортсмен</h2>
             </div>
           </div>
           <button class="profile__add-button"></button>
