--- a/index.html
+++ b/index.html
@@ -32,11 +32,57 @@
           <button class="profile__add-button"></button>
       </section>
 
+      <section class="grid-photos">
+        <div class="grid-photos__grid-item">
+          <img src="./images/kate-nesmieian-rRXUtG1Kbqs-unsplash.jpg" alt="" class="grid-photos__image">
+          <div class="grid-photos__wrap">
+            <h3 class="grid-photos__name">Конь на лугу</h3>
+            <button class="grid-photos__like"></button>
+          </div>
+        </div>
+        <div class="grid-photos__grid-item">
+          <img src="./images/mark-neal-Am8FAT_PoJM-unsplash.jpg" alt="" class="grid-photos__image">
+          <div class="grid-photos__wrap">
+            <h3 class="grid-photos__name">Лошадки</h3>
+            <button class="grid-photos__like"></button>
+          </div>
+        </div>
+        <div class="grid-photos__grid-item">
+          <img src="./images/navid-bazari-Vw4oefoH4Iw-unsplash.jpg" alt="" class="grid-photos__image">
+          <div class="grid-photos__wrap">
+            <h3 class="grid-photos__name">Милая лошадь</h3>
+            <button class="grid-photos__like"></button>
+          </div>
+        </div>
+        <div class="grid-photos__grid-item">
+          <img src="./images/raphael-wicker-P6JRr7-FxLw-unsplash.jpg" alt="" class="grid-photos__image">
+          <div class="grid-photos__wrap">
+            <h3 class="grid-photos__name">Разговор коней</h3>
+            <button class="grid-photos__like"></button>
+          </div>
+        </div>
+        <div class="grid-photos__grid-item">
+          <img src="./images/rich-dahlgren--MMRAIrqgUE-unsplash.jpg" alt="" class="grid-photos__image">
+          <div class="grid-photos__wrap">
+            <h3 class="grid-photos__name">Утренний завтрак</h3>
+            <button class="grid-photos__like"></button>
+          </div>
+        </div>
+        <div class="grid-photos__grid-item">
+          <img src="./images/santiago-martin-7NC_LcUaky8-unsplash.jpg" alt="" class="grid-photos__image">
+          <div class="grid-photos__wrap">
+            <h3 class="grid-photos__name">Внимательный конь</h3>
+            <button class="grid-photos__like"></button>
+          </div>
+        </div>
+      </section>
     </main>
 
 <!-- Footer -->
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <p class="footer__copyright">© 2020 Mesto Russia</p>
+    </footer>
   </div>
 </body>
 </html>
