--- a/index.html
+++ b/index.html
@@ -84,5 +84,18 @@
       <p class="footer__copyright">© 2020 Mesto Russia</p>
     </footer>
   </div>
+
+  <div class="popup">
+    <div class="popup__container">
+      <h4 class="popup__title">Редактировать профиль</h4>
+      <form action="" class="popup__form">
+        <input type="text" class="popup__name">
+        <input type="text" class="popup__profession">
+        <input type="submit" class="popup__button-save" value="Сохранить"></input>
+      </form>
+    </div>
+    <button class="popup__button-close"></button>
+  </div>
+
 </body>
 </html>
