fix: исправить ширину и центрирование контента

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="./images/avatar.jpg" alt="Аватар профиля" class="profile__avatar">
             <div class="profile__info">
               <div class="profile__wrap">
-                <h1 class="profile__name">Евгений Адольф</h1>
+                <h1 class="profile__name">Максим Хорс</h1>
                 <button class="profile__edit-button"></button>
               </div>
               <h2 class="profile__profession">Конный спортсмен</h2>
