refactor: добавить кнопкам тип button, исправить название JS файла, добавить картинкам alt

--- a/index.html
+++ b/index.html
@@ -24,52 +24,52 @@
             <div class="profile__info">
               <div class="profile__wrap">
                 <h1 class="profile__name">Максим Хорс</h1>
-                <button class="profile__edit-button"></button>
+                <button type="button" class="profile__edit-button"></button>
               </div>
               <h2 class="profile__profession">Конный спортсмен</h2>
             </div>
           </div>
-          <button class="profile__add-button"></button>
+          <button type="button" class="profile__add-button"></button>
       </section>
 
       <section class="grid-photos">
         <div class="grid-photos__grid-item">
-          <img src="./images/kate-nesmieian-rRXUtG1Kbqs-unsplash.jpg" alt="" class="grid-photos__image">
+          <img src="./images/kate-nesmieian-rRXUtG1Kbqs-unsplash.jpg" alt="Конь на лугу" class="grid-photos__image">
           <div class="grid-photos__wrap">
             <h3 class="grid-photos__name">Конь на лугу</h3>
             <button class="grid-photos__like"></button>
           </div>
         </div>
         <div class="grid-photos__grid-item">
-          <img src="./images/mark-neal-Am8FAT_PoJM-unsplash.jpg" alt="" class="grid-photos__image">
+          <img src="./images/mark-neal-Am8FAT_PoJM-unsplash.jpg" alt="Лошади на поле" class="grid-photos__image">
           <div class="grid-photos__wrap">
             <h3 class="grid-photos__name">Лошадки</h3>
             <button class="grid-photos__like"></button>
           </div>
         </div>
         <div class="grid-photos__grid-item">
-          <img src="./images/navid-bazari-Vw4oefoH4Iw-unsplash.jpg" alt="" class="grid-photos__image">
+          <img src="./images/navid-bazari-Vw4oefoH4Iw-unsplash.jpg" alt="Лошадь возле куста" class="grid-photos__image">
           <div class="grid-photos__wrap">
             <h3 class="grid-photos__name">Милая лошадь</h3>
             <button class="grid-photos__like"></button>
           </div>
         </div>
         <div class="grid-photos__grid-item">
-          <img src="./images/raphael-wicker-P6JRr7-FxLw-unsplash.jpg" alt="" class="grid-photos__image">
+          <img src="./images/raphael-wicker-P6JRr7-FxLw-unsplash.jpg" alt="Два коня" class="grid-photos__image">
           <div class="grid-photos__wrap">
             <h3 class="grid-photos__name">Разговор коней</h3>
             <button class="grid-photos__like"></button>
           </div>
         </div>
         <div class="grid-photos__grid-item">
-          <img src="./images/rich-dahlgren--MMRAIrqgUE-unsplash.jpg" alt="" class="grid-photos__image">
+          <img src="./images/rich-dahlgren--MMRAIrqgUE-unsplash.jpg" alt="Конь щиплет траву" class="grid-photos__image">
           <div class="grid-photos__wrap">
             <h3 class="grid-photos__name">Утренний завтрак</h3>
             <button class="grid-photos__like"></button>
           </div>
         </div>
         <div class="grid-photos__grid-item">
-          <img src="./images/santiago-martin-7NC_LcUaky8-unsplash.jpg" alt="" class="grid-photos__image">
+          <img src="./images/santiago-martin-7NC_LcUaky8-unsplash.jpg" alt="Взгляд коня" class="grid-photos__image">
           <div class="grid-photos__wrap">
             <h3 class="grid-photos__name">Внимательный конь</h3>
             <button class="grid-photos__like"></button>
@@ -94,9 +94,9 @@
         <input type="submit" class="popup__button-save" value="Сохранить"></input>
       </form>
     </div>
-    <button class="popup__button-close"></button>
+    <button type="button" class="popup__button-close"></button>
   </div>
 
-  <script src="./scripts/main.js"></script>
+  <script src="./scripts/index.js"></script>
 </body>
 </html>
