refactor: убрать закрывающий тег input, удалить у формы атрибут action

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
   <div class="popup">
     <div class="popup__container">
       <h4 class="popup__title">Редактировать профиль</h4>
-      <form action="" class="popup__form" name="editProfile">
+      <form class="popup__form" name="editProfile">
         <input type="text" class="popup__name" name="name">
         <input type="text" class="popup__profession" name="profession">
-        <input type="submit" class="popup__button-save" value="Сохранить" name="submit"></input>
+        <input type="submit" class="popup__button-save" value="Сохранить" name="submit">
       </form>
     </div>
     <button type="button" class="popup__button-close"></button>
