--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h1 class="profile__name">Максим Хорс</h1>
                 <button type="button" class="profile__edit-button"></button>
               </div>
-              <h2 class="profile__profession">Конный спортсмен</h2>
+              <p class="profile__profession">Конный спортсмен</p>
             </div>
           </div>
           <button type="button" class="profile__add-button"></button>
@@ -89,8 +89,8 @@
     <div class="popup__container">
       <h4 class="popup__title">Редактировать профиль</h4>
       <form class="popup__form" name="editProfile">
-        <input type="text" class="popup__name" name="name">
-        <input type="text" class="popup__profession" name="profession">
+        <input type="text" class="popup__input popup__input_name_name" name="name">
+        <input type="text" class="popup__input popup__input_name_profession" name="profession">
         <input type="submit" class="popup__button-save" value="Сохранить" name="submit">
       </form>
     </div>
