--- a/index.html
+++ b/index.html
@@ -33,48 +33,48 @@
       </section>
 
       <section class="grid-photos">
-        <div class="grid-photos__grid-item">
-          <img src="./images/kate-nesmieian-rRXUtG1Kbqs-unsplash.jpg" alt="Конь на лугу" class="grid-photos__image">
-          <div class="grid-photos__wrap">
-            <h3 class="grid-photos__name">Конь на лугу</h3>
-            <button class="grid-photos__like"></button>
+        <article class="grid-item">
+          <img src="./images/kate-nesmieian-rRXUtG1Kbqs-unsplash.jpg" alt="Конь на лугу" class="grid-item__image">
+          <div class="grid-item__wrap">
+            <h3 class="grid-item__name">Конь на лугу</h3>
+            <button class="grid-item__like"></button>
           </div>
-        </div>
-        <div class="grid-photos__grid-item">
-          <img src="./images/mark-neal-Am8FAT_PoJM-unsplash.jpg" alt="Лошади на поле" class="grid-photos__image">
-          <div class="grid-photos__wrap">
-            <h3 class="grid-photos__name">Лошадки</h3>
-            <button class="grid-photos__like"></button>
+        </article>
+        <article class="grid-item">
+          <img src="./images/mark-neal-Am8FAT_PoJM-unsplash.jpg" alt="Лошади на поле" class="grid-item__image">
+          <div class="grid-item__wrap">
+            <h3 class="grid-item__name">Лошадки</h3>
+            <button class="grid-item__like"></button>
           </div>
-        </div>
-        <div class="grid-photos__grid-item">
-          <img src="./images/navid-bazari-Vw4oefoH4Iw-unsplash.jpg" alt="Лошадь возле куста" class="grid-photos__image">
-          <div class="grid-photos__wrap">
-            <h3 class="grid-photos__name">Милая лошадь</h3>
-            <button class="grid-photos__like"></button>
+        </article>
+        <article class="grid-item">
+          <img src="./images/navid-bazari-Vw4oefoH4Iw-unsplash.jpg" alt="Лошадь возле куста" class="grid-item__image">
+          <div class="grid-item__wrap">
+            <h3 class="grid-item__name">Милая лошадь</h3>
+            <button class="grid-item__like"></button>
           </div>
-        </div>
-        <div class="grid-photos__grid-item">
-          <img src="./images/raphael-wicker-P6JRr7-FxLw-unsplash.jpg" alt="Два коня" class="grid-photos__image">
-          <div class="grid-photos__wrap">
-            <h3 class="grid-photos__name">Разговор коней</h3>
-            <button class="grid-photos__like"></button>
+        </article>
+        <article class="grid-item">
+          <img src="./images/raphael-wicker-P6JRr7-FxLw-unsplash.jpg" alt="Два коня" class="grid-item__image">
+          <div class="grid-item__wrap">
+            <h3 class="grid-item__name">Разговор коней</h3>
+            <button class="grid-item__like"></button>
           </div>
-        </div>
-        <div class="grid-photos__grid-item">
-          <img src="./images/rich-dahlgren--MMRAIrqgUE-unsplash.jpg" alt="Конь щиплет траву" class="grid-photos__image">
-          <div class="grid-photos__wrap">
-            <h3 class="grid-photos__name">Утренний завтрак</h3>
-            <button class="grid-photos__like"></button>
+        </article>
+        <article class="grid-item">
+          <img src="./images/rich-dahlgren--MMRAIrqgUE-unsplash.jpg" alt="Конь щиплет траву" class="grid-item__image">
+          <div class="grid-item__wrap">
+            <h3 class="grid-item__name">Утренний завтрак</h3>
+            <button class="grid-item__like"></button>
           </div>
-        </div>
-        <div class="grid-photos__grid-item">
-          <img src="./images/santiago-martin-7NC_LcUaky8-unsplash.jpg" alt="Взгляд коня" class="grid-photos__image">
-          <div class="grid-photos__wrap">
-            <h3 class="grid-photos__name">Внимательный конь</h3>
-            <button class="grid-photos__like"></button>
+        </article>
+        <article class="grid-item">
+          <img src="./images/santiago-martin-7NC_LcUaky8-unsplash.jpg" alt="Взгляд коня" class="grid-item__image">
+          <div class="grid-item__wrap">
+            <h3 class="grid-item__name">Внимательный конь</h3>
+            <button class="grid-item__like"></button>
           </div>
-        </div>
+        </article>
       </section>
     </main>
 
