--- a/index.html
+++ b/index.html
@@ -33,48 +33,6 @@
       </section>
 
       <section class="grid-photos">
-        <article class="grid-item">
-          <img src="./images/kate-nesmieian-rRXUtG1Kbqs-unsplash.jpg" alt="Конь на лугу" class="grid-item__image">
-          <div class="grid-item__wrap">
-            <h3 class="grid-item__name">Конь на лугу</h3>
-            <button class="grid-item__like"></button>
-          </div>
-        </article>
-        <article class="grid-item">
-          <img src="./images/mark-neal-Am8FAT_PoJM-unsplash.jpg" alt="Лошади на поле" class="grid-item__image">
-          <div class="grid-item__wrap">
-            <h3 class="grid-item__name">Лошадки</h3>
-            <button class="grid-item__like"></button>
-          </div>
-        </article>
-        <article class="grid-item">
-          <img src="./images/navid-bazari-Vw4oefoH4Iw-unsplash.jpg" alt="Лошадь возле куста" class="grid-item__image">
-          <div class="grid-item__wrap">
-            <h3 class="grid-item__name">Милая лошадь</h3>
-            <button class="grid-item__like"></button>
-          </div>
-        </article>
-        <article class="grid-item">
-          <img src="./images/raphael-wicker-P6JRr7-FxLw-unsplash.jpg" alt="Два коня" class="grid-item__image">
-          <div class="grid-item__wrap">
-            <h3 class="grid-item__name">Разговор коней</h3>
-            <button class="grid-item__like"></button>
-          </div>
-        </article>
-        <article class="grid-item">
-          <img src="./images/rich-dahlgren--MMRAIrqgUE-unsplash.jpg" alt="Конь щиплет траву" class="grid-item__image">
-          <div class="grid-item__wrap">
-            <h3 class="grid-item__name">Утренний завтрак</h3>
-            <button class="grid-item__like"></button>
-          </div>
-        </article>
-        <article class="grid-item">
-          <img src="./images/santiago-martin-7NC_LcUaky8-unsplash.jpg" alt="Взгляд коня" class="grid-item__image">
-          <div class="grid-item__wrap">
-            <h3 class="grid-item__name">Внимательный конь</h3>
-            <button class="grid-item__like"></button>
-          </div>
-        </article>
       </section>
     </main>
 
@@ -96,6 +54,18 @@
     </div>
     <button type="button" class="popup__button-close"></button>
   </div>
+
+  <!-- Templates -->
+
+  <template id="grid-item">
+    <article class="grid-item">
+      <img src="" alt="" class="grid-item__image">
+      <div class="grid-item__wrap">
+        <h3 class="grid-item__name"></h3>
+        <button class="grid-item__like"></button>
+      </div>
+    </article>
+  </template>
 
   <script src="./scripts/index.js"></script>
 </body>
