feat: добавить возможность удаления карточки

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
   <template id="grid-item">
     <article class="grid-item">
+      <img src="./images/delete-icon.svg" alt="" class="grid-item__delete-icon">
       <img src="" alt="" class="grid-item__image">
       <div class="grid-item__wrap">
         <h3 class="grid-item__name"></h3>
