hotfix: добавить валидацию на форму добавления новой карточки

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <div class="popup__container">
       <h4 class="popup__title">Новое место</h4>
       <form class="popup__form" name="editProfile">
-        <input type="text" placeholder="Название" class="popup__input popup__input_name_title-card" name="title-card">
-        <input type="text" placeholder="Ссылка на картинку" class="popup__input popup__input_name_link-card" name="link-card">
+        <input type="text" placeholder="Название" class="popup__input popup__input_name_title-card" name="title-card" required>
+        <input type="url" placeholder="Ссылка на картинку" class="popup__input popup__input_name_link-card" name="link-card" required>
         <input type="submit" class="popup__button-save" value="Сохранить" name="submit">
       </form>
       <button type="button" class="popup__button-close"></button>
