refactor: добавить валидацию форме редактирования профиля

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <div class="popup__container">
       <h4 class="popup__title">Редактировать профиль</h4>
       <form class="popup__form" name="editProfile">
-        <input type="text" class="popup__input popup__input_name_name" name="name">
-        <input type="text" class="popup__input popup__input_name_profession" name="profession">
+        <input type="text" class="popup__input popup__input_name_name" name="name" required>
+        <input type="text" class="popup__input popup__input_name_profession" name="profession" required>
         <input type="submit" class="popup__button-save" value="Сохранить" name="submit">
       </form>
       <button type="button" class="popup__button-close"></button>
