--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
   </template>
 
   <script src="./scripts/index.js" type="module"></script> 
+  <script src="./scripts/utils.js" type="module"></script> 
   <script src="./scripts/validate.js"></script>
 </body>
 </html>
