--- a/index.html
+++ b/index.html
@@ -99,6 +99,6 @@
 
   <script src="./scripts/index.js" type="module"></script> 
   <script src="./scripts/utils.js" type="module"></script> 
-  <script src="./scripts/validate.js"></script>
+  <!-- <script src="./scripts/validate.js"></script> -->
 </body>
 </html>
