--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       <h4 class="popup__title">Редактировать профиль</h4>
       <form class="popup__form" name="editProfile" novalidate>
         <input minlength="2" maxlength="40" type="text" class="popup__input popup__input_name_name" name="name" id="name-input" placeholder="Имя" value="Максим Хорс" required>
-        <span class='popup__input-error' id='name-input-error'></span>
+        <span class='popup__input-error popup__input-error_active' id='name-input-error'></span>
         <input minlength="2" maxlength="200" type="text" class="popup__input popup__input_name_profession" name="profession" placeholder="Вид деятельности" id="profession-input" value="Конный спортсмен" required>
-        <span class='popup__input-error' id='profession-input-error'></span>
+        <span class='popup__input-error popup__input-error_active' id='profession-input-error'></span>
         <input type="submit" class="popup__button-save" value="Сохранить" name="submit">
       </form>
       <button type="button" class="popup__button-close"></button>
