--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
-  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="container">
   <div class="page">
@@ -77,7 +76,7 @@
 <!-- Popup image -->
 <div class="popup popup_type_image">
   <div class="popup__wrap">
-    <img src="" alt="" class="popup__image">
+    <img src="#" alt="" class="popup__image">
     <p class="popup__title-image"></p>
     <button type="button" class="popup__button-close"></button>
   </div>
@@ -87,7 +86,7 @@
   <template id="grid-item">
     <li class="grid-item">
       <img src="./images/delete-icon.svg" alt="" class="grid-item__delete-icon">
-      <img src="" alt="" class="grid-item__image">
+      <img src="#" alt="" class="grid-item__image">
       <div class="grid-item__wrap">
         <h3 class="grid-item__name"></h3>
         <svg class='grid-item__like' width="21" height="19" viewBox="0 0 21 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -97,8 +96,5 @@
     </li>
   </template>
 
-  <script src="./scripts/index.js" type="module"></script> 
-  <script src="./scripts/initial-cards.js" type="module"></script> 
-  
 </body>
 </html>
