refactor: дописать класс UserInfo

--- a/src/index.html
+++ b/src/index.html
@@ -48,9 +48,9 @@
     <div class="popup__container">
       <h4 class="popup__title">Редактировать профиль</h4>
       <form class="popup__form" name="editProfile" novalidate>
-        <input minlength="2" maxlength="40" type="text" class="popup__input popup__input_name_name" name="name" id="name-input" placeholder="Имя" value="Максим Хорс" required>
+        <input minlength="2" maxlength="40" type="text" class="popup__input popup__input_name_name" name="name" id="name-input" placeholder="Имя" required>
         <span class='popup__input-error popup__input-error_active' id='name-input-error'></span>
-        <input minlength="2" maxlength="200" type="text" class="popup__input popup__input_name_profession" name="profession" placeholder="Вид деятельности" id="profession-input" value="Конный спортсмен" required>
+        <input minlength="2" maxlength="200" type="text" class="popup__input popup__input_name_profession" name="profession" placeholder="Вид деятельности" id="profession-input" required>
         <span class='popup__input-error popup__input-error_active' id='profession-input-error'></span>
         <input type="submit" class="popup__button-save" value="Сохранить" name="submit">
       </form>
