--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,10 @@
     <main class="content">
       <section class="profile">
           <div class="profile__container">
-            <img src="./images/avatar.jpg" alt="Аватар профиля" class="profile__avatar">
+            <div class="profile__avatar-wrapp">
+              <img src="./images/avatar.jpg" alt="Аватар профиля" class="profile__avatar">
+              <img src="./images/editAvatar.svg" alt="Смена аватара" class="profile__avatar-edit">
+            </div>
             <div class="profile__info">
               <div class="profile__wrap">
                 <h1 class="profile__name">Максим Хорс</h1>
