feat: сверстать попап подтверждения удаления карточки

--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,17 @@
   </div>
 </div>
 
+<!-- Popup delete card confirm -->
+<div class="popup popup_type_delete">
+  <div class="popup__container">
+    <h4 class="popup__title">Вы уверены?</h4>
+    <form class="popup__form" name="deleteCard" novalidate>
+      <input type="submit" class="popup__button-save" value="Да" name="submit">
+    </form>
+    <button type="button" class="popup__button-close"></button>
+  </div>
+</div>
+
 <!-- Templates -->
   <template id="grid-item">
     <li class="grid-item">
