--- a/src/index.html
+++ b/src/index.html
@@ -98,11 +98,11 @@
   </div>
 </div>
 
-<!-- Popup delete card confirm -->
-<div class="popup popup_type_delete">
+<!-- Popup confirm -->
+<div class="popup popup_type_confirm">
   <div class="popup__container">
     <h4 class="popup__title">Вы уверены?</h4>
-    <form class="popup__form" name="deleteCard" novalidate>
+    <form class="popup__form" name="confirm" novalidate>
       <input type="submit" class="popup__button-save" value="Да" name="submit">
     </form>
     <button type="button" class="popup__button-close"></button>
